<resources>
    <string name="app_name">PicEditor</string>

    <string name="picture_description">picture</string>
    <string name="change_picture_button">Change picture</string>
    <string name="reset_c_button">Reset</string>


    <string name="filter_button">Filters</string>
    <string name="egalisation_histogram_button">Egalisation histogram</string>
    <string name="saturation_button">Saturation</string>
    <string name="brightness_button">Brightness</string>
    <string name="selected_color_button">Keep Hue</string>
    <string name="random_button">Colorise</string>
    <string name="negative_button">Negative</string>
    <string name="linear_transformation_button">Linear extansion</string>
    <string name="gray_button">Gray</string>
    <string name="blur_button">Blur</string>
    <string name="reverse_button">Mirror</string>
    <string name="rotation_button">Rotation</string>
    <string name="transformation_button">Transformation</string>
    <string name="sepia_button">Sepia</string>

    <string name="average_button">Average</string>
    <string name="average_3_button">3*3</string>
    <string name="average_7_button">7*7</string>
    <string name="average_15_button">15*15</string>

    <string name="gaussian_button">Gaussian 5*5</string>

    <string name="laplacian_button">Laplacian</string>
    <string name="laplacian_4_button">4cx</string>
    <string name="laplacian_8_button">8cx</string>

    <string name="prewitt_button">Prewitt</string>
    <string name="sobel_button">Sobel</string>
    <string name="horizontal_filter">Horizontal</string>
    <string name="vertical_filter">Vertical</string>
    <string name="hor_ver_filter">All</string>


    <string name="return_button">Return</string>
    <string name="camera_string">Camera</string>
    <string name="gallery_string">Gallery</string>
    <string name="save_button" >Save</string>
    <string name="renderscript_switch">Renderscript</string>
    <string name="setRGB">Set RGB</string>

</resources>