<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/average_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickView"
                android:text="@string/average_button">

            </Button>

            <Button
                android:id="@+id/gaussian_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickAlgorithms"
                android:text="@string/gaussian_button">

            </Button>

            <Button
                android:id="@+id/prewitt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickView"
                android:text="@string/prewitt_button">

            </Button>

            <Button
                android:id="@+id/sobel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickView"
                android:text="@string/sobel_button">

            </Button>

            <Button
                android:id="@+id/laplacian_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickView"
                android:text="@string/laplacian_button">
                match_parent
            </Button>
        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickReturn"
        android:text="@string/return_button"></Button>

</LinearLayout>