<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/laplacian_button"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/laplacian_4_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickAlgorithms"
                android:text="@string/laplacian_4_button"></Button>

            <Button
                android:id="@+id/laplacian_8_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickAlgorithms"
                android:text="@string/laplacian_8_button"></Button>

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickReturnFilters"
        android:text="@string/return_button"></Button>

</LinearLayout>