<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/annuler"
            android:onClick="onClickReturn" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/blur_button"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/validateButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/valider"
            android:onClick="onClickValidate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/average_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickView"
            android:text="@string/average_button"
            android:textColor="@color/colorAccent">

        </Button>

        <Button
            android:id="@+id/gaussian_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickAlgorithms"
            android:text="@string/gaussian_button"
            android:textColor="@color/colorAccent">

        </Button>

    </LinearLayout>

</LinearLayout>