<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/annuler"
            android:onClick="onClickReturn" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/transformation_button"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/validateButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/background"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/reverseHorButton"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:background="@drawable/inverser2"
                            android:onClick="onClickAlgorithms" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/reverseVerButton"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:background="@drawable/inverser"
                            android:onClick="onClickAlgorithms" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/mirror_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="7dp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:text="@string/reverse_button"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/rotate_right_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/rotation_right"
                            android:onClick="onClickAlgorithms" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/rotate_left_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/rotation_left"
                            android:onClick="onClickAlgorithms" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/rotation_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#00FFFFFF"
                    android:text="@string/rotation_button"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>